Co-authored-by: h21andli <h21andli@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   },
   "homepage": "https://github.com/h21lierk/gik2f8-grupp33-projekt#readme",
   "keywords": [],
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
